--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -3,7 +3,7 @@
 %\geometry{a4paper}													        % ... or a4paper or a5paper or ... 
 %\geometry{landscape}													    % Activate for rotated page geometry
 %\usepackage[parfill]{parskip}												% Activate to begin paragraphs with an empty line rather than an indent
-%\usepackage{graphicx}                                                      % Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode		
+%\usepackage{graphicx}                                                      % Use pdf, png, jpg, or epsï¿½ with pdflatex; use eps in DVI mode		
 %\usepackage{amssymb}
 %SetFonts
 %SetFonts
@@ -13,7 +13,7 @@
 \documentclass[journal]{IEEEtran}										    % use "amsart" instead of "article" for AMSLaTeX format
 \usepackage[showframe=false]{geometry}										% See geometry.pdf to learn the layout options. There are lots.
 \geometry{left=1.7cm,right=1.7cm,top=1.9cm,bottom=2cm}                      % Set margin of the paper
-\usepackage[pdftex]{graphicx}													    % Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
+\usepackage[pdftex]{graphicx}													    % Use pdf, png, jpg, or epsï¿½ with pdflatex; use eps in DVI mode
 \graphicspath{{img/}}
 % \usepackage{blindtext}                                                      % Dummy Text
 \usepackage{hyperref}                                                       % Link to Reference 
@@ -31,7 +31,7 @@
         Nowadays, video games are among the best sources of entertainment 
         that people use to enjoy themselves together. In addition to the 
         entertainment, the player will also gain knowledge or skills 
-        depending on the purpose of the game?s creators. We  develop a new 
+        depending on the purpose of the game's creators. We  develop a new 
         kind of game that uses Leap Motion to detect your own hands and 
         control the character movements via different gestures. 
         The Leap Motion will make game more fun, challenge, and interesting. 
@@ -43,7 +43,7 @@
 
     \section{Introduction}                                                  % Start Introduction here
         \IEEEPARstart{C}{urrently}, the social condition makes a pressure 
-        on people?s stress. Video games are one of the answers to help relieve 
+        on people's stress. Video games are one of the answers to help relieve 
         stress. Today there are many developers who created the video 
         game in the market but it doesn't have a new technology to make 
         a different video game. Leap Motion is one of technology that 
@@ -53,7 +53,7 @@
         In this project, we will use Leap Motion technology, one of
         the new technology that use virtual hand to control object
         in video game. To create a racing video game by tracking 
-        hand to control character?s movement depending on the 
+        hand to control character's movement depending on the 
         physical characteristic of each animal. The movement of 
         character in the game is related to movement of the hand 
         which makes the game more challenge and interesting.
@@ -97,7 +97,7 @@
                 discrete positions and motion. The Leap Motion controller uses 
                 optical sensors and infrared light. Detection and tracking work 
                 best when the controller has a clear, high-contrast view of an 
-                object?s silhouette.
+                object's silhouette.
 
                 The Leap Motion software uses an internal model of a human hand 
                 to provide predictive tracking even when parts of a hand are not 
@@ -165,7 +165,7 @@
                     after the player surmount a challenge that costs him a lot of resources
                     
                     \item   Avoid conceptual non-sequiturs creator should consider 
-                    to build things that make sense. Don?t put dangers or reward 
+                    to build things that make sense. Don't put dangers or reward 
                     in places in which no sane person could possibly expect to find them
                     
                     \item   Short-term goal creator should Clearly inform the player 
@@ -190,7 +190,7 @@
 
                     \item Accessible to a wider audience by allowing them to switch the difficulty 
                     of your game to easy, normal or hard setting. And Be able to tweak the numbers 
-                    to adjust the difficulty to accommodate the player?s preference
+                    to adjust the difficulty to accommodate the player's preference
 
                 \end{itemize}
 
@@ -257,7 +257,7 @@
                 \begin{figure}[h]
                     \centering
                     \includegraphics[width=5cm]{Leap-Image-Rays}
-                    \caption{A view angle of 150 degrees corresponds to a slope of ±4 
+                    \caption{A view angle of 150 degrees corresponds to a slope of ï¿½4 
                     (The tangent of 75 degrees is approximately 4) \cite{TAG13}}
                     \label{fig:leapCam2}
                 \end{figure}
@@ -266,44 +266,44 @@
         \begin{thebibliography}{1}
 
             \bibitem{TAG1}
-                Elyoenai Guerra-Segura,Carlos M. Travieso and Jesús B. Alonso, ?Study of the 
-                variability of the Leap Motion?s measures for its use to characterize air strokes?, 
+                Elyoenai Guerra-Segura,Carlos M. Travieso and Jesï¿½s B. Alonso, "Study of the 
+                variability of the Leap Motion's measures for its use to characterize air strokes", 
                 \emph{in Measurement}, Vol. 105, pp. 87-97, July 2017
                 
                 
             \bibitem{TAG2}
-                Catalin Constantin Moldovan and Ionel Staretu, ?An Anthropomorphic Hand with Five 
-                Fingers Controlled by a Motion Leap Device?, \emph{in Procedia Engineering}, Vol. 181, 
+                Catalin Constantin Moldovan and Ionel Staretu, "An Anthropomorphic Hand with Five 
+                Fingers Controlled by a Motion Leap Device", \emph{in Procedia Engineering}, Vol. 181, 
                 pp. 575-582, 2017
                 
 
             \bibitem{TAG3}
-                Christianne Falcao,Ana Catarina Lemos and Marcelo Soares, ?Evaluation of Natural User 
-                Interface: A Usability Study Based on the Leap Motion Device?, 
+                Christianne Falcao,Ana Catarina Lemos and Marcelo Soares, "Evaluation of Natural User 
+                Interface: A Usability Study Based on the Leap Motion Device", 
                 \emph{in Procedia Manufacturing}, Vol. 3, pp. 5490-5495, 2015
             
             \bibitem{TAG4}
-                Dario Senkic, ?Dynamic Simulations in a 3D-Environment a comparison between Maya
-                and Blender?, in Academy for technology and environment University of Gävle, 
+                Dario Senkic, "Dynamic Simulations in a 3D-Environment a comparison between Maya
+                and Blender", in Academy for technology and environment University of Gï¿½vle, 
                 September 2010
 
             \bibitem{TAG5}
-                Darran Jamieson, ?Making Difficult Fun: How to Challenge Your Players?, [Online]
+                Darran Jamieson, "Making Difficult Fun: How to Challenge Your Players", [Online]
                 Available: https://gamedevelopment.
                 tutsplus.com/tutorials/making-difficult-fun-how-to-challenge-your-players--cms-25873 [Accessed: May 20, 2016]
             
             \bibitem{TAG6}
-                Michael B. and David H., ?Leap Motion API?, [Online] Available :
+                Michael B. and David H., "Leap Motion API", [Online] Available :
                 https://developer.leapmotion.com/documentation/csharp/devguide/ \\
                 Leap\textunderscore Overview.html 
                 [Accessed: April 10, 2017]
 
             \bibitem{TAG7}
-                Unity Technologies, ?Unity Scripting API?, [Online] Available :
+                Unity Technologies, "Unity Scripting API", [Online] Available :
                 https://docs.unity3d.com/Manual/ScriptingSection.html [Accessed: April 5, 2018]
             
             \bibitem{TAG8}
-                Unity Technologies, ?Importing Objects From Blender?, [Online] Available : 
+                Unity Technologies, "Importing Objects From Blender", [Online] Available : 
                 https://docs.unity3d.com/Manual/HOWTO-ImportObjectBlender.html [Accessed: April 5, 2018]
 
             \bibitem{TAG9}
@@ -311,7 +311,7 @@
                 www.cas.mcmaster.ca/~se3gb3/SE3GB3/2014/slides/Chapter12.pptx
             
             \bibitem{TAG10}
-                Michael B. and David H., ?Camera Image?, [Online] Available : 
+                Michael B. and David H., "Camera Image", [Online] Available : 
                 https://developer.leapmotion.com/documentation/csharp/devguide/ \\
                 Leap\textunderscore Images.html 
                 [Accessed: April 10, 2017]
