Update theory intro

--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -87,8 +87,8 @@
 
 
         \section{Related Theory}
-        In this section, we introduce the important API, design principle and algorithm
-        that related to our project.
+        In this section, the document will cover the information about API, design principle and algorithm
+        that related and can be use as reference or guide our project.
 
             \subsection{Leap Motion API}
                 The Leap Motion is a new technology for a system recognizes 
